# radxa-dragon-q6a-npu-ai

./: .gitignore  LICENSE  LINKS.md  README.md
docker/: Dockerfile  README.md  compose.yml
docs/: 01-overview.md  02-npu-dma-fix.md  03-genie-rs-api.md  04-htp-config.md  05-kernel-update-procedure.md  06-troubleshooting.md  07-model-build-pipeline.md  VTCM-BLOCKER.md  sandbox.md
genie-configs/: htp-model-config-llama32-1b-gqa.json  htp_backend_ext_config.json  registry.toml
genie-rs/: Cargo.toml  build.rs
genie-rs/models/: registry.toml
genie-rs/src/: main.rs
genie-rs/src/chat/: mod.rs  text_splitter.rs
genie-rs/src/config/: mod.rs  qnn_config.rs  registry.rs
genie-rs/src/context/: genie_context.rs  mod.rs
genie-rs/src/ffi/: mod.rs
genie-rs/src/hybrid/: hybrid.cpp  hybrid.hpp  hybrid_engine.c  hybrid_final.c  hybrid_wrapper.cpp
genie-rs/src/server/: mod.rs  routes.rs
npu-dma-fix/: build-and-apply.sh  npu-dma-fix-overlay.dts
scripts/: build-genie-hybrid.sh  deploy-to-dragon.sh  genie-rs.service  start-genie-rs.sh  start-genie-server.sh
