[package]
name = "genie-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
libc = "0.2"
tokio-stream = "0.1"

[build-dependencies]
bindgen = "0.69"
